--- a/frontend/style.css
+++ b/frontend/style.css
@@ -10,16 +10,6 @@ h1 {
   text-align: center;
 }
 
-#contato-form {
-  background-color: #fff;
-  padding: 40px;
-  width: 300px;
-  margin: 20px;
-  float: left;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
 label {
   display: block;
   margin-bottom: 5px;
@@ -32,8 +22,8 @@ input[type="tel"] {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
 }
 
 button {
@@ -74,29 +64,54 @@ tr:hover {
   background-color: #f5f5f5;
   transition: background-color 0.3s;
 }
+/*
+.footer {
+  height: 100%;
+  margin: 50px;
+  padding: 50;
+}
+*/
 
-/* ... (Estilos anteriores) ... */
+.adicionarcontato {
+  margin: 0px;
+}
+
+/* Styles for forms */
 
 #consulta-form {
-  background-color: #fff;
+  background-color:#fff;
   padding: 20px;
-  width: 400px; /* Aumente a largura do campo de pesquisa para 400px ou o valor desejado */
-  margin: 20px;
+  width: 640px; /* Aumentar a largura*/
+  height: 150px;
+  margin: 10px;
   float: right;
   border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0  rgba(151, 144, 144, 0.2);
 }
 
-/* ... (Estilos anteriores) ... */
+#contato-form {
+  background-color: #fff;
+  padding: 20px;
+  width: 49%; /* Defina a largura como 50% para ocupar metade da tela */
+  margin: 10px auto; /* Centralize horizontalmente */
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  float: left;
+}
 
 #pesquisa {
-  width: 100%; /* Defina a largura do campo de pesquisa como 100% para preencher todo o espaço disponível */
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  width: 98%; /* Definir a largura */
+  padding: 6px;
+  margin-bottom: 15px;
+  border: 2px solid #f1eded;
+  border-radius: 4px;
 }
 
+#contatos-table {
+  width: 98%;
+}
 
-
-
+#categoria {
+  
+  margin-bottom: 15px;
+}
