--- a/frontend/style2.css
+++ b/frontend/style2.css
@@ -9,3 +9,76 @@ body {
     padding: 10px;
     text-align: center;
   }
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    padding: 20px;
+  }
+  
+  h1 {
+    background-color: #007BFF;
+    color: white;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .nome-list {
+    list-style: none;
+    padding: 0;
+    text-align: left;
+  }
+  
+  .nome-list li {
+    background-color: #fff;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .nome {
+    flex: 1;
+  }
+  
+  button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin-left: 5px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+  label {
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+  }
+  button:hover {
+    background-color: #0056b3;
+  }
+  #consulta-form {
+    background-color:#fff;
+    padding: 20px;
+    width: 640px; /* Aumentar a largura*/
+    height: 450px;
+    float: right;
+    border-radius: 5px;
+    margin-right: 600px;
+    box-shadow: 0 0  rgba(151, 144, 144, 0.2);
+  }
