--- a/frontend/style2.css
+++ b/frontend/style2.css
@@ -1,7 +1,8 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-  }
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+  padding: 20px; /* Adiciona margem fixa de 20px em todos os lados do corpo */
+}
   
   h1 {
     background-color: #007BFF;
@@ -73,12 +74,12 @@ body {
     background-color: #0056b3;
   }
   #consulta-form {
-    background-color:#fff;
+    background-color: #fff;
     padding: 20px;
-    width: 640px; /* Aumentar a largura*/
-    height: 450px;
-    float: right;
+    width: 640px;
+    height: 410px;
+    float: left;
     border-radius: 5px;
-    margin-right: 600px;
+    margin-right: 20px; /* Adiciona uma margem fixa de 20px à direita do elemento */
     box-shadow: 0 0  rgba(151, 144, 144, 0.2);
-  }
+}
