--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,89 @@
+@media screen and (max-width:760px) {
+  /*Tela Pequena*/
+  #register-contacts {
+    background-color: #fff;  
+    width: 49%; /* largura */
+    margin: 10px ; /* Centralize horizontalmente */
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    float: left;
+  }
+  
+  #consult-contacts {
+  background-color:#fff;
+    max-width: 650px; /* Aumentar a largura*/
+    width: 90%;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
+    float: left;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1024) {
+  /*Tela Media*/
+  #register-contacts {
+    background-color: #fff;
+    padding: 20px;
+    width: 49%; /* largura */
+    margin: 10px ; /* Centralize horizontalmente */
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    float: left;
+  }
+  
+  #consult-contacts {
+    background-color:#fff;
+    padding: 20px;
+    max-width: 650px;
+    width: 40%;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
+    float: right;
+  }
+  
+  #result-contacts {
+    width: 98%; /* Definir a largura */
+    padding: 2px;
+    margin-bottom: 15px;
+    border: 3v solid #f1eded;
+  
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  /*Tela Grande*/
+  #register-contacts {
+    background-color: #fff;
+    padding: 20px;
+    width: 49%; /* largura */
+    margin: 10px ; /* Centralize horizontalmente */
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    float: left;
+  }
+  
+  #consult-contacts {
+    background-color:#fff;
+    padding: 20px;
+    max-width: 650px;
+    width: 40%;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
+    float: right;
+  }
+  
+  #result-contacts {
+    width: 98%; /* Definir a largura */
+    padding: 2px;
+    margin-bottom: 15px;
+    border: 3v solid #f1eded;
+  
+  }
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
@@ -29,7 +115,7 @@ input[type="tel"] {
 
 /*botão para adicionar contato*/
 button {
-  padding: 10px 20px;
+  padding: 10px 30px;
   background-color: #007BFF;
   margin-left: 0%;
   margin-right: 30px;
@@ -39,12 +125,10 @@ button {
   cursor: pointer;
 }
 
-
 table {
   background-color: #fff;
   width: calc(100% - 360px);
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 20px;
   border-collapse: collapse;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -61,7 +145,6 @@ th {
   color: white;
 }
 
-
 /* caixa pesquisar por nome*/
 #consulta-form {
   display: inline-block;
@@ -70,7 +153,6 @@ th {
   width: 600px; /* Aumentar a largura*/
   height: 100px;
   margin: 10px;
-  float: right;
   border-radius: 5px;
 }
 
@@ -97,8 +179,51 @@ th {
 
 #categoria {
   margin-bottom: 10px;
+
+tr:hover {
+  background-color: #f5f5f5;
+  transition: background-color 0.3s;
 }
 
-#contatos-table {
-  width: 98%;
+/* Styles for forms */
+
+.linkpage1,.linkpage2{
+  text-decoration: none;
+
+}
+
+
+#categoria{
+  margin-bottom: 10px;
+}
+
+
+#register-contacts {
+  background-color: #fff;
+  padding: 20px;
+  width: 49%; /* largura */
+  margin: 10px ; /* Centralize horizontalmente */
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  float: left;
+}
+
+#consult-contacts {
+  background-color:#fff;
+  padding: 20px;
+  max-width: 650px;
+  width: 40%;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
+  float: right;
+}
+
+#result-contacts {
+  width: 98%; /* Definir a largura */
+  padding: 2px;
+  margin-bottom: 15px;
+  border: 3v solid #f1eded;
+
+}
 }
