--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:760px) {
+@media screen and (max-width:600px) {
   /*Tela Pequena*/
   #register-contacts {
     background-color: #fff;  
@@ -24,31 +24,29 @@
   /*Tela Media*/
   #register-contacts {
     background-color: #fff;
-    padding: 20px;
+    padding: 10px;
     width: 49%; /* largura */
     margin: 10px ; /* Centralize horizontalmente */
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    float: left;
+    
   }
   
   #consult-contacts {
     background-color:#fff;
-    padding: 20px;
+    padding: 10px;
     max-width: 650px;
     width: 40%;
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-    float: right;
   }
   
   #result-contacts {
     width: 98%; /* Definir a largura */
     padding: 2px;
     margin-bottom: 15px;
-    border: 3v solid #f1eded;
-  
+    border: 3px solid #f1eded;
   }
 }
 
@@ -72,7 +70,7 @@
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-    float: right;
+    float: left;
   }
   
   #result-contacts {
@@ -179,19 +177,16 @@ th {
 
 #categoria {
   margin-bottom: 10px;
-
-tr:hover {
+  tr:hover {
   background-color: #f5f5f5;
   transition: background-color 0.3s;
 }
 
 /* Styles for forms */
 
-.linkpage1,.linkpage2{
+.bt1{
   text-decoration: none;
-
 }
-
 
 #categoria{
   margin-bottom: 10px;
