alteraçao do botao de troca de paginas

--- a/frontend/contacts/style.css
+++ b/frontend/contacts/style.css
@@ -164,7 +164,7 @@ ul.pagination li a {
 }
 
 ul.pagination li a.active {
-  background-color: #4CAF50;
+  background-color: #007BFF;
   color: white;
 }
 
