tabela categorias estilizada

--- a/frontend/category/styles.css
+++ b/frontend/category/styles.css
@@ -1,86 +1,27 @@
-@media screen and (max-width:600px) {
-  /*Tela Pequena*/
-  #register-category {
-    background-color: #fff;  
-    width: 49%; /* largura */
-    margin: 10px ; /* Centralize horizontalmente */
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    float: left;
-  }
-  
-  #consult-category {
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+}  
+#consulta-form {
   background-color:#fff;
-    max-width: 650px; /* Aumentar a largura*/
-    width: 90%;
+    padding: 10px;
+    max-width: 750px;
+    width: 70%;
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-    float: left;
-  }
 }
 
-@media screen and (min-width: 601px) and (max-width: 1024) {
-  /*Tela Media*/
-  #register-category {
-    background-color: #fff;
+#contato-form {
+  background-color:#fff;
     padding: 10px;
-    width: 49%; /* largura */
-    margin: 10px ; /* Centralize horizontalmente */
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    
-  }
-  
-  #consult-category {
-    background-color:#fff;
-    padding: 10px;
-    max-width: 650px;
-    width: 40%;
+    max-width: 750px;
+    width: 70%;
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-  }
-  
-  #result-category {
-    width: 98%; /* Definir a largura */
-    padding: 2px;
-    margin-bottom: 15px;
-    border: 3px solid #f1eded;
-  }
 }
 
-@media screen and (min-width: 1025px) {
-  /*Tela Grande*/
-  #register-category {
-    background-color: #fff;
-    padding: 20px;
-    width: 49%; /* largura */
-    margin: 10px ; /* Centralize horizontalmente */
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    float: left;
-  }
-  
-  #consult-category {
-    background-color:#fff;
-    padding: 20px;
-    max-width: 650px;
-    width: 40%;
-    margin: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-    float: left;
-  }
-  
-  #result-category {
-    width: 98%; /* Definir a largura */
-    padding: 2px;
-    margin-bottom: 15px;
-    border: 3v solid #f1eded;
-  
-  }
-}
 h1 {
   background-color: #007BFF;
   color: white;
@@ -115,7 +56,7 @@ button {
 table {
   background-color: #fff;
   width: calc(100% - 360px);
-  margin: 20px;
+  margin: 10px;
   border-collapse: collapse;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -129,5 +70,29 @@ th, td {
 th {
   background-color: #007BFF;
   color: white;
+}
+ul.pagination {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 20px 0; /* Adicione margem na parte inferior */
+}
+ul.pagination li {display: inline;}
+
+ul.pagination li a {
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+  text-align: center;
+}
+ul.pagination li a.active {
+  background-color: #007BFF;
+  color: white;
+}
+ul.pagination li a:hover:not(.active) {background-color: #ddd;}
+
+#Cadastro_contacts {
+  margin: 10px;
 }
 
