--- a/frontend/category/styles.css
+++ b/frontend/category/styles.css
@@ -154,7 +154,8 @@ th, td {
 th {
   background-color: #007BFF;
   color: white;
-}  
+} 
+
 ul.pagination {
   display: flex;
   justify-content: center;
@@ -162,22 +163,25 @@ ul.pagination {
   padding: 0;
   margin: 20px 0; /* Adicione margem na parte inferior */
 }
-
-ul.pagination li {display: inline;}
-
-ul.pagination li a {
-  color: black;
-  padding: 8px 16px;
-  text-decoration: none;
-  text-align: center;
-}
-
-ul.pagination li a.active {
-  background-color: #007BFF;
-  color: white;
-}
-
-ul.pagination li a:hover:not(.active) {background-color: #ddd;}
+      ul.pagination li {
+      display: inline;
+    }
+        ul.pagination li a {
+          color: black;
+          padding: 8px 16px;
+          text-decoration: none;
+          text-align: center;
+        }
+            ul.pagination li a.active {
+              background-color: #007BFF;
+              color: white;
+            }
+              ul.pagination li:not(:last-child) {
+                margin-right: 5px; /* Adicione uma margem à direita para criar a linha branca */
+              }
+                ul.pagination li a:hover(.active) {
+                      background-color: #ddd;
+                    }
 
 
 #categoria {
