--- a/frontend/contacts/style.css
+++ b/frontend/contacts/style.css
@@ -178,8 +178,12 @@ ul.pagination li {
             }
 
               ul.pagination li a.active:hover {
-  background-color:darkblue;
-}
+                background-color:darkblue;
+                }
+
+        .seta:hover {
+         background-color:gainsboro;
+         }
 
 
 
