--- a/frontend/category/styles.css
+++ b/frontend/category/styles.css
@@ -1,31 +1,45 @@
 @media screen and (max-width:600px) {
   /*Tela Pequena*/
+  #register-category {
+    background-color: #fff;  
+    width: 49%; /* largura */
+    margin: 10px ; /* Centralize horizontalmente */
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    float: left;
+  }  
+  
   #consult-category {
   background-color:#fff;  
-    width: 98%;
+    max-width: 650px; /* Aumentar a largura*/
+    width: 90%;
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-  }  
-
-  #result-category {
-    width: 98%; /* Definir a largura */
-    padding: 2px;
-    margin-bottom: 15px;
-    border: 3px solid #f1eded;
+    float: left;
   }  
 }  
 
-@media screen and (min-width: 601px) and (max-width: 1024px) {
+@media screen and (min-width: 601px) and (max-width: 1024) {
   /*Tela Media*/
+  #register-category {
+    background-color: #fff;
+    padding: 10px;
+    width: 49%; /* largura */
+    margin: 10px ; /* Centralize horizontalmente */
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    
+  }  
+  
   #consult-category {
     background-color:#fff;
-    padding: 7px;
-    width: 98%;
+    padding: 10px;
+    max-width: 650px;
+    width: 40%;
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-    float: right;
   }  
   
   #result-category {
@@ -38,14 +52,24 @@
 
 @media screen and (min-width: 1025px) {
   /*Tela Grande*/
+  #register-category {
+    background-color: #fff;
+    padding: 20px;
+    width: 49%; /* largura */
+    margin: 10px ; /* Centralize horizontalmente */
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    float: left;
+  }  
+  
   #consult-category {
     background-color:#fff;
-    padding: 15px;
-    width: 96%;
+    padding: 40px;
+    width: 42%;
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-    float: right;
+    float: left;
   }  
   
   #result-category {
@@ -53,7 +77,6 @@
     padding: 2px;
     margin-bottom: 15px;
     border: 3v solid #f1eded;
-    float:none;
   }  
 }  
 
@@ -86,7 +109,19 @@ input[type="tel"] {
   border-radius: 4px;
 }  
 
-/*botão para adicionar contato*/
+.container {
+  background-color: #f0f0f0;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 155px;
+  background-color: #007BFF;
+}
+
+.container select {
+  width: 100%;  
+}
+
 button {
   padding: 10px 30px;
   background-color: #007BFF;
@@ -96,9 +131,12 @@ button {
   border: none;
   border-radius: 3px;
   cursor: pointer;
-}  
+} 
 
-/* tabelo de resultado do cadastro*/
+button:hover {
+  background-color: darkblue;
+}
+
 table {
   background-color: #fff;
   width: calc(100% - 360px);
@@ -108,25 +146,21 @@ table {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }  
 
+
 .acoes {
   width: 10px;
-}
-
-button:hover {
-  background-color: darkblue;
 }
 
 th, td {
   border: 1px solid #ccc;
   padding: 8px;
   text-align: left;
-}  
+} 
 
 th {
   background-color: #007BFF;
   color: white;
-} 
-
+}  
 ul.pagination {
   display: flex;
   justify-content: center;
@@ -134,59 +168,71 @@ ul.pagination {
   padding: 0;
   margin: 20px 0; /* Adicione margem na parte inferior */
 }
-      ul.pagination li {
-      display: inline;
-    }
-        ul.pagination li a {
-          color: black;
-          padding: 8px 16px;
-          text-decoration: none;
-          text-align: center;
-        }
-            ul.pagination li a.active {
-              background-color: #007BFF;
-              color: white;
-            }
-              ul.pagination li:not(:last-child) {
-                margin-right: 5px; /* Adicione uma margem à direita para criar a linha branca */
-              }
-              ul.pagination li a.active:hover {
-                background-color:darkblue;
-              }
 
-    .seta:hover {
-      background-color:gainsboro;
-    }
-              
+ul.pagination li {
+  display: inline;
+}
 
+ul.pagination li a {
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+  text-align: center;
+}
 
+ul.pagination li a.active {
+  background-color: #007BFF;
+  color: white;
+}
+
+ul.pagination li:not(:last-child) {
+  margin-right: 5px; /* Adicione uma margem à direita para criar a linha branca */
+}
+
+ul.pagination li a.active:hover {
+  background-color:darkblue;
+}
+
+.seta:hover {
+  background-color: gainsboro;
+}
+        
 #categoria {
   margin-bottom: 10px;
-  tr:hover {
-  background-color: #f5f5f5;  
+}        
+tr:hover {
+  background-color: #f5f5f5;
   transition: background-color 0.3s;
   margin-bottom: 10px;
-}  
-
-
-
-/* Styles for forms */
-
-#consult-category {
-  background-color:#fff;
+}
+        
+/* Styles for forms */        
+#register-category {
+  background-color: #fff;
   padding: 20px;
-  max-width: 650px;
-  width: 98%;
+  width: 46%;
+  /* largura */
+  margin: 10px;
+  /* Centralize horizontalmente */
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  float: left;
+}
+        
+#consult-category {
+  background-color: #fff;
+  width: 45%;
   margin: 10px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
   float: right;
-}  
-
+}
+        
 #result-category {
-  width: 98%; /* Definir a largura */
+  width: 98%;
+  /* Definir a largura */
   padding: 2px;
   margin-bottom: 15px;
-  border: 3px solid #f1eded;
-}  
+  border: 3v solid #f1eded;
 }
+ 
