--- a/frontend/contacts/style.css
+++ b/frontend/contacts/style.css
@@ -10,7 +10,7 @@
   }  
   
   #consult-contacts {
-  background-color:#fff;  
+    background-color:#fff;  
     max-width: 650px; /* Aumentar a largura*/
     width: 90%;
     margin: 10px;
@@ -79,6 +79,25 @@
     border: 3v solid #f1eded;
   }  
 }  
+
+
+footer {
+  background-color: #007BFF; /* Cor de fundo */
+  color: #fff; /* Cor do texto */
+  text-align: center; /* Alinhamento do texto */
+  padding: 20px; /* Espaçamento interno */
+}
+
+footer p {
+  font-size: 18px; /* Tamanho da fonte do parágrafo */
+  margin: 0; /* Remova a margem padrão do parágrafo */
+}
+ footer a{
+  color: #fcf9f9;
+ }
+ .spacer {
+  margin-left: 10px; /* Adicione a quantidade de espaço desejada */
+}
 
 body {
   font-family: Arial, sans-serif;
@@ -244,4 +263,5 @@ ul.pagination li {
   margin-bottom: 15px;
   border: 3v solid #f1eded;
 }  
+
 }
