--- a/frontend/category/style/styles.css
+++ b/frontend/category/style/styles.css
@@ -1,113 +1,88 @@
-@media screen and (max-width:600px) {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 800px) {
   /*Tela Pequena*/
   #register-category {
-    background-color: #fff;  
+    background-color: #fff;
     width: 49%; /* largura */
-    margin: 10px ; /* Centralize horizontalmente */
+    margin: 10px; /* Centralize horizontalmente */
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     float: left;
-  }  
-  
+  }
+
   #consult-category {
-  background-color:#fff;  
+    background-color: #fff;
     max-width: 650px; /* Aumentar a largura*/
     width: 90%;
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
     float: left;
-  }  
-}  
+  }
+}
 
-@media screen and (min-width: 601px) and (max-width: 1024) {
-  /*Tela Media*/
-  #register-category {
-    background-color: #fff;
-    padding: 10px;
-    width: 49%; /* largura */
-    margin: 10px ; /* Centralize horizontalmente */
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    
-  }  
-  
-  #consult-category {
-    background-color:#fff;
-    padding: 10px;
-    max-width: 650px;
-    width: 40%;
-    margin: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-  }  
-  
-  #result-category {
-    width: 98%; /* Definir a largura */
-    padding: 2px;
-    margin-bottom: 15px;
-    border: 3px solid #f1eded;
-  }  
-}  
-
-@media screen and (min-width: 1025px) {
+@media (min-width: 8001px) {
   /*Tela Grande*/
   #register-category {
     background-color: #fff;
     padding: 20px;
     width: 49%; /* largura */
-    margin: 10px ; /* Centralize horizontalmente */
+    margin: 10px; /* Centralize horizontalmente */
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     float: left;
-  }  
-  
+  }
+
   #consult-category {
-    background-color:#fff;
+    background-color: #fff;
     padding: 40px;
     width: 42%;
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
     float: left;
-  }  
-  
+  }
+
   #result-category {
     width: 98%; /* Definir a largura */
     padding: 2px;
     margin-bottom: 15px;
     border: 3v solid #f1eded;
-  }  
-}  
+  }
+}
 
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
-}  
+}
 
 h1 {
-  background-color: #007BFF;
+  background-color: #007bff;
   color: white;
   padding: 10px;
   text-align: center;
-}  
+}
 
 label {
   display: block;
   margin-bottom: 5px;
   color: #333;
-}  
+}
 
 input[type="text"],
 input[type="email"],
 input[type="tel"] {
-  box-sizing: border-box; 
+  box-sizing: border-box;
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
   border: 2px solid #ccc;
   border-radius: 4px;
-}  
+}
 
 .container {
   background-color: #f0f0f0;
@@ -115,23 +90,23 @@ input[type="tel"] {
   border: 1px solid #ccc;
   border-radius: 5px;
   width: 155px;
-  background-color: #007BFF;
+  background-color: #007bff;
 }
 
 .container select {
-  width: 100%;  
+  width: 100%;
 }
 
 button {
   padding: 10px 30px;
-  background-color: #007BFF;
+  background-color: #007bff;
   margin-left: 0%;
   margin-right: 30px;
   color: white;
   border: none;
   border-radius: 3px;
   cursor: pointer;
-} 
+}
 
 button:hover {
   background-color: darkblue;
@@ -144,23 +119,24 @@ table {
   border-collapse: collapse;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}  
-
+}
 
 .acoes {
   width: 10px;
 }
 
-th, td {
+th,
+td {
   border: 1px solid #ccc;
   padding: 8px;
   text-align: left;
-} 
+}
 
 th {
-  background-color: #007BFF;
+  background-color: #007bff;
   color: white;
-}  
+}
+
 ul.pagination {
   display: flex;
   justify-content: center;
@@ -181,7 +157,7 @@ ul.pagination li a {
 }
 
 ul.pagination li a.active {
-  background-color: #007BFF;
+  background-color: #007bff;
   color: white;
 }
 
@@ -190,23 +166,23 @@ ul.pagination li:not(:last-child) {
 }
 
 ul.pagination li a.active:hover {
-  background-color:darkblue;
+  background-color: darkblue;
 }
 
 .seta:hover {
   background-color: gainsboro;
 }
-        
+
 #categoria {
   margin-bottom: 10px;
-}        
+}
 tr:hover {
   background-color: #f5f5f5;
   transition: background-color 0.3s;
   margin-bottom: 10px;
 }
-        
-/* Styles for forms */        
+
+/* Styles for forms */
 #register-category {
   background-color: #fff;
   padding: 20px;
@@ -218,7 +194,7 @@ tr:hover {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   float: left;
 }
-        
+
 #consult-category {
   background-color: #fff;
   width: 45%;
@@ -227,29 +203,32 @@ tr:hover {
   box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
   float: right;
 }
-        
+
 #result-category {
   width: 98%;
-  /* Definir a largura */
   padding: 2px;
   margin-bottom: 15px;
   border: 3v solid #f1eded;
 }
 footer {
-  background-color: #007BFF; /* Cor de fundo */
-  color: #fff; /* Cor do texto */
-  text-align: center; /* Alinhamento do texto */
-  padding: 20px; /* Espaçamento interno */
+  background-color: #007bff;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
 }
-    footer p {
-      font-size: 18px; /* Tamanho da fonte do parágrafo */
-      margin: 0; /* Remova a margem padrão do parágrafo */
-    }
-        footer a{
-          color: #fcf9f9;
-        }
 
-        .spacer {
-          margin-left: 10px; /* Adicione a quantidade de espaço desejada */
-        }
- 
+footer p {
+  font-size: 18px;
+  margin: 0;
+}
+
+footer a {
+  color: #fcf9f9;
+}
+
+.spacer {
+  margin-left: 10px;
+}
