--- a/frontend/contacts/style/style.css
+++ b/frontend/contacts/style/style.css
@@ -180,10 +180,12 @@ footer {
   background-color: #007bff;
   color: #fff;
   text-align: center;
-  padding: 20px;
+  padding: 30px;
   position: fixed;
   width: 100%;
+  height: 25px;
   bottom: 0px;
+  display: flex;
 }
 
 footer p {
@@ -191,12 +193,13 @@ footer p {
   margin: 0;
 }
 
-footer a {
-  color: #fcf9f9;
+#copyright {
+  margin-left: 40%;
+  display: flex;
 }
 
-.spacer {
-  margin-left: 10px;
+footer a {
+  color: #fcf9f9;
 }
 
 @media (max-width: 800px) {
@@ -209,7 +212,7 @@ footer a {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     float: left;
   }
-  
+
   #consult-contacts {
     background-color: #fff;
     max-width: 650px; /* Aumentar a largura*/
